snapshots/syntax/library/functions/objects/getobject/getobject_basic.snap
---
source: src/syntax/library/functions/objects/getobject.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SetStatement
      children:
        - kind: SetKeyword
          text: Set
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: xlApp
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: GetObject
        - kind: LeftParenthesis
          text: (
        - kind: StringLiteral
          text: "\"C:\\Reports\\Sales.xls\""
        - kind: RightParenthesis
          text: )
