snapshots/syntax/library/functions/objects/getobject/getobject_collection_add.snap
---
source: vb6parse/src/syntax/library/functions/objects/getobject.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: CallStatement
      children:
        - kind: Identifier
          text: m_Instances
        - kind: PeriodOperator
          text: "."
        - kind: Identifier
          text: Add
        - kind: Whitespace
          text: " "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: GetObject
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children: []
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"Excel.Application\""
                    - kind: RightParenthesis
                      text: )
            - kind: Comma
              text: ","
            - kind: Whitespace
              text: " "
            - kind: Argument
              children:
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"Excel\""
