snapshots/syntax/library/functions/objects/getobject/getobject_concatenation.snap
---
source: src/syntax/library/functions/objects/getobject.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: filePath
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: MemberAccessExpression
          children:
            - kind: StringLiteralExpression
              children:
                - kind: StringLiteral
                  text: "\"C:\\Data\\\" & fileName & \""
            - kind: PeriodOperator
              text: "."
            - kind: Identifier
              text: xls
    - kind: Unknown
      text: "\""
    - kind: Newline
      text: "\n"
    - kind: SetStatement
      children:
        - kind: SetKeyword
          text: Set
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: doc
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: GetObject
        - kind: LeftParenthesis
          text: (
        - kind: Identifier
          text: filePath
        - kind: RightParenthesis
          text: )
