snapshots/syntax/library/functions/objects/getobject/getobject_debug_print.snap
---
source: vb6parse/src/syntax/library/functions/objects/getobject.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: CallStatement
      children:
        - kind: Identifier
          text: Debug
        - kind: PeriodOperator
          text: "."
        - kind: PrintKeyword
          text: Print
        - kind: Whitespace
          text: " "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: BinaryExpression
                  children:
                    - kind: StringLiteralExpression
                      children:
                        - kind: StringLiteral
                          text: "\"Count: \""
                    - kind: Whitespace
                      text: " "
                    - kind: Ampersand
                      text: "&"
                    - kind: Whitespace
                      text: " "
                    - kind: CallExpression
                      children:
                        - kind: Identifier
                          text: GetObject
                        - kind: LeftParenthesis
                          text: (
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Comma
                                      text: ","
                            - kind: Whitespace
                              text: " "
    - kind: Unknown
      text: "\"Excel.Application\""
    - kind: Unknown
      text: )
    - kind: CallStatement
      children:
        - kind: PeriodOperator
          text: "."
        - kind: Identifier
          text: Workbooks
        - kind: PeriodOperator
          text: "."
        - kind: Identifier
          text: Count
