snapshots/syntax/library/functions/objects/getobject/getobject_if_statement.snap
---
source: vb6parse/src/syntax/library/functions/objects/getobject.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: IfStatement
      children:
        - kind: IfKeyword
          text: If
        - kind: Whitespace
          text: " "
        - kind: UnaryExpression
          children:
            - kind: NotKeyword
              text: Not
            - kind: Whitespace
              text: " "
            - kind: CallExpression
              children:
                - kind: Identifier
                  text: GetObject
                - kind: LeftParenthesis
                  text: (
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Comma
                              text: ","
                    - kind: Whitespace
                      text: " "
        - kind: StringLiteral
          text: "\"Excel.Application\""
        - kind: RightParenthesis
          text: )
        - kind: Whitespace
          text: " "
        - kind: IsKeyword
          text: Is
        - kind: Whitespace
          text: " "
        - kind: NothingKeyword
          text: Nothing
        - kind: Whitespace
          text: " "
        - kind: ThenKeyword
          text: Then
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "    "
    - kind: CallStatement
      children:
        - kind: Identifier
          text: MsgBox
        - kind: Whitespace
          text: " "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"Excel is running\""
        - kind: Newline
          text: "\n"
    - kind: EndKeyword
      text: End
    - kind: Whitespace
      text: " "
    - kind: IfStatement
      children:
        - kind: IfKeyword
          text: If
        - kind: IdentifierExpression
          children: []
        - kind: StatementList
          children: []
